fix(tests): Some code check warns are fixed.